Fix: mobile nav not showing up as expected
Replaced $screen-sm-min with 992px

--- a/src/App/components/Mobile/Mobile.scss
+++ b/src/App/components/Mobile/Mobile.scss
@@ -28,7 +28,7 @@
     }
   }
 
-  @media screen and (min-width: $screen-sm-min){
+  @media screen and (min-width: 992px){
     display: none;
   }
 }
